# lvk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_shaders.bat  remaining functions to demonolithic.txt
backends/sdl/: CMakeLists.txt
backends/sdl/include/: VkSDL.h  VulkanAPI_SDL.h
backends/sdl/include/ImGui/: imgui_impl_sdl2.h  imgui_impl_sdl3.h
backends/sdl/src/: VkSDL.cpp  VulkanAPI_SDL.cpp  VulkanAPI_SDL.h
backends/sdl/src/ImGui/: imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp
examples/: example-common.h
examples/compute/: CMakeLists.txt  compile_shaders.bat  dis.spv  main.cpp
examples/compute/shaders/: gbuffer.frag  gbuffer.vert  lights.frag  lights.vert  particle.comp  particle.comp.spv  particle_gbuffer.frag  particle_gbuffer.vert  particles.comp
examples/depth/: CMakeLists.txt  main.cpp
examples/depth/shaders/: texture.frag  texture.frag.spv
examples/hello-triangle/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/im3d-multiview/: CMakeLists.txt  main.cpp
examples/im3d-multiview/shaders/: gbuffer.vert  lights.frag  lights.frag.spv
examples/im3d-test/: CMakeLists.txt  main.cpp
examples/im3d-test/shaders/: lights.frag
examples/lights/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/lights-deferred/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/lights-deferred-minified/: CMakeLists.txt  main.cpp
examples/lights-deferred-minified/shaders/: gbuffer.vert.spv
examples/lights-deferred/shaders/: gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  lights.frag  lights.frag.spv  lights.vert.spv  texture.frag  texture.frag.spv
examples/lights-forward/: CMakeLists.txt  main.cpp
examples/lights-forward/shaders/: lights.frag  lights.frag.spv  lights.vert  lights.vert.spv
examples/mipmaps/: CMakeLists.txt  main.cpp
examples/model/: CMakeLists.txt  main.cpp
examples/msaa/: CMakeLists.txt  main.cpp
examples/msaa/shaders/: texture.vert
examples/pipeline-abstraction/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/pipeline-abstraction/shaders/: SSGI.frag  SSGI.utils.glsl  gbuffer.vert  gbuffer.vert.spv  lights.frag.spv  ssgi.frag.spv
examples/ssgi/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/ssgi/shaders/: SSGI.frag  SSGI.utils.glsl  SSGIold.frag  SSGIold2.frag  accumulate.frag  gbuffer.frag.spv  lights.frag  lights.frag.spv  lights.vert  lights.vert.spv  ssgi.frag.spv
examples/texture-mapping/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/texture-mapping/shaders/: texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
examples/uniforms/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/uniforms-v2/: CMakeLists.txt  main.cpp
examples/uniforms-v2/shaders/: uniform.vert
examples/uniforms/shaders/: uniform.vert
examples/vertex-buffer/: CMakeLists.txt  compile_shaders.bat  main.cpp
examples/vertex-buffer/shaders/: vb.vert
examples/vertex-index-buffer/: CMakeLists.txt  main.cpp
examples/vertex-index-buffer/shaders/: vb.vert.spv
lvk/: CMakeLists.txt  compile_shaders.bat
lvk/include/: Alias.h  VulkanAPI.h  VulkanMemoryAllocator.h
lvk/include/Im3D/: im3d.h  im3d_config.h  im3d_lvk.h
lvk/include/Im3D/shaders/: im3d_lines.frag.spv.h  im3d_lines.vert.spv.h  im3d_points.frag.spv.h  im3d_points.vert.spv.h  im3d_tris.frag.spv.h  im3d_tris.vert.spv.h
lvk/include/ImGui/: imgui.h  imgui_impl_vulkan.h  lvk_extensions.h
lvk/include/lvk/: Buffer.h  Commands.h  Defaults.h  Descriptor.h  DescriptorSetAllocator.h  Framebuffer.h  Init.h  Macros.h  Material.h  Mesh.h  Pipeline.h  RenderPass.h  Shader.h  Structs.h  Submission.h  Texture.h  Utils.h  VkAPI.h  VkBackend.h  VulkanAPI.h  lvk.h
lvk/shaders/: im3d_lines.frag  im3d_lines.frag.spv  im3d_lines.vert  im3d_lines.vert.spv  im3d_points.frag  im3d_points.frag.spv  im3d_points.vert  im3d_points.vert.spv  im3d_tris.frag  im3d_tris.frag.spv  im3d_tris.vert  im3d_tris.vert.spv
lvk/src/: VulkanAPI.cpp  VulkanAPI.h
lvk/src/Im3D/: im3d.cpp  im3d_lvk.cpp
lvk/src/ImGui/: imgui.cpp  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
lvk/src/lvk/: Buffer.cpp  Commands.cpp  Descriptor.cpp  DescriptorSetAllocator.cpp  Framebuffer.cpp  Init.cpp  Material.cpp  Mesh.cpp  Pipeline.cpp  RenderPass.cpp  Shader.cpp  Structs.cpp  Submission.cpp  Texture.cpp  Utils.cpp  VkBackend.cpp  VulkanAPI.cpp
meta/lvk/: LVK.md  Resources.md  Tidbits.md
meta/lvk/.obsidian/: community-plugins.json  workspace.json
meta/lvk/.obsidian/plugins/calendar/: main.js
meta/lvk/.obsidian/plugins/cm-editor-syntax-highlight-obsidian/: styles.css
meta/lvk/.obsidian/plugins/obsidian-auto-link-title/: main.js
meta/lvk/.obsidian/plugins/obsidian-link-embed/: main.js  manifest.json  styles.css
meta/lvk/.obsidian/plugins/obsidian-style-settings/: main.js  styles.css
meta/lvk/.obsidian/plugins/obsidian-thumbnails/: data.json  main.js  manifest.json  styles.css
meta/lvk/.obsidian/plugins/templater-obsidian/: main.js  manifest.json  styles.css
meta/lvk/Debugging/: Im3D Debugging.md
src/: VulkanAPI.cpp  VulkanAPI.h  VulkanAPI_SDL.cpp  VulkanAPI_SDL.h  main.cpp  sdl_helpers.hpp
